--- a/wowpub.cn/src/main/webapp/css/style.css
+++ b/wowpub.cn/src/main/webapp/css/style.css
@@ -10,9 +10,8 @@ body {
 
 #title{
 	text-align: center;
-	color: rgb(128,255,128);
+	/*color: rgb(128,255,128);*/
 }
 .center{
-	color:rgb(128,255,128);
 	margin-left:40%;
 }
